--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@base-ui/react": "^1.1.0",
     "@google/genai": "^1.34.0",
     "@supabase/supabase-js": "2.48.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.563.0",
@@ -24,6 +26,7 @@
     "shadcn": "^3.7.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "tailwindcss-animate": "^1.0.7",
     "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
